playground/GKE_sandpit/hello-world-internal-lb/configuration/hello-world-service-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service-1
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    #cloud.google.com/neg: '{"exposed_ports": {"60000":{}}}'
spec:
  type: NodePort
  selector:
    greeting: hello
    version: one
  ports:
  - protocol: TCP
    port: 60000
    targetPort: 50000
