playground/GKE_sandpit/hello-world-internal-lb/configuration/hello-world-service-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service-2
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    #cloud.google.com/neg: '{"exposed_ports": {"80":{}}}'
spec:
  type: NodePort
  selector:
    greeting: hello
    version: two
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
